add: Backend funcionando

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-URIDB = mongodb://localhost:27017/Store
+URIDB = mongodb+srv://gabrielsalvarani_db_user:sCxR6CXIGWmPlvuF@cluster0.2wgr7sz.mongodb.net/?appName=Cluster0
 PORT = 3000
